ColorCube: DepthTest doesn't work on MTL pipeline

XMLWordPrintable

      It looks like depth testing is not working for 2D objects that use a 3D transformation. To reproduce, run the following on the metal branch using the (default) MTL pipeline:

      1. java -jar apps/toys/ColorCube/dist/ColorCube.jar

      BUG: It will be rendered without depth testing

      NOTE: this demo creates a "cube" out of 6 2D Rectangle objects with 3D transforms.

      This works correctly on the ES2 pipeline.

        1. ColorCube_MTL.png
          ColorCube_MTL.png
          395 kB
        2. ColorCube_ES2.png
          ColorCube_ES2.png
          393 kB
        3. color_cube_fix.patch
          8 kB

            Assignee:
            Jayathirth D V
            Reporter:
            Kevin Rushforth
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: