8350513: ColorCube: DepthTest doesn't work on MTL pipeline