modules/javafx.graphics/src/main/native-prism-mtl/MetalContext.m
@@ -429,6 +429,11 @@
 
     [renderEncoder setRenderPipelineState:[shader getPipelineState:[rtt isMSAAEnabled]
                                                      compositeMode:compositeMode]];
+    if (depthEnabled) {
+        id<MTLDepthStencilState> depthStencilState =
+            [[self getPipelineManager] getDepthStencilState];
+        [renderEncoder setDepthStencilState:depthStencilState];
+    }
 
     if ([shader getArgumentBufferLength] != 0) {
         [shader copyArgBufferToRingBuffer];
@@ -534,14 +539,6 @@
     worldMatrix = matrix_identity_float4x4;
 }
 
-- (void) resetRenderPass
-{
-    CTX_LOG(@"MetalContext.resetRenderPass()");
-    if (depthEnabled) {
-        rttPassDesc.depthAttachment.loadAction = MTLLoadActionLoad;
-    }
-}
-
 - (void) clearRTT:(float)red
             green:(float)green
              blue:(float)blue
@@ -551,7 +548,27 @@
     CTX_LOG(@">>>> MetalContext.clearRTT() %f, %f, %f, %f", red, green, blue, alpha);
     CTX_LOG(@">>>> MetalContext.clearRTT() %d", clearDepth);
 
-    clearDepthTexture = clearDepth;
+    clearDepthTexture = false;
+    if (clearDepth &&
+        [rtt getDepthTexture] != nil) {
+        CTX_LOG(@"     MetalContext.clearRTT() clearing depth attachment");
+        clearDepthTexture = true;
+        rttPassDesc.depthAttachment.clearDepth = 1.0;
+        rttPassDesc.depthAttachment.loadAction = MTLLoadActionClear;
+        if ([[self getRTT] isMSAAEnabled]) {
+            CTX_LOG(@"MetalContext.clearRTT() MSAA");
+            rttPassDesc.depthAttachment.storeAction = MTLStoreActionStoreAndMultisampleResolve;
+            rttPassDesc.depthAttachment.texture = [rtt getDepthMSAATexture];
+            rttPassDesc.depthAttachment.resolveTexture = [rtt getDepthTexture];
+        } else {
+            CTX_LOG(@"MetalContext.clearRTT() non-MSAA");
+            rttPassDesc.depthAttachment.storeAction = MTLStoreActionStore;
+            rttPassDesc.depthAttachment.texture = [[self getRTT] getDepthTexture];
+            rttPassDesc.depthAttachment.resolveTexture = nil;
+        }
+    } else {
+        rttPassDesc.depthAttachment = nil;
+    }
     clearColor[0] = red;
     clearColor[1] = green;
     clearColor[2] = blue;
@@ -560,6 +577,11 @@
     id<MTLRenderCommandEncoder> renderEncoder = [self getCurrentRenderEncoder];
 
     [renderEncoder setRenderPipelineState:[pipelineManager getClearRttPipeState]];
+    if (clearDepthTexture) {
+        id<MTLDepthStencilState> depthStencilState =
+            [[self getPipelineManager] getDepthStencilState];
+        [renderEncoder setDepthStencilState:depthStencilState];
+    }
     [renderEncoder setFrontFacingWinding:MTLWindingClockwise];
     [renderEncoder setCullMode:MTLCullModeNone];
     [renderEncoder setTriangleFillMode:MTLTriangleFillModeFill];
@@ -590,7 +612,7 @@
                              indexBuffer:indexBuffer
                        indexBufferOffset:0];
 
-    if (clearDepthTexture && !depthEnabled) {
+    if (clearDepth && !depthEnabled) {
         [self endCurrentRenderEncoder];
     }
 
@@ -727,14 +749,6 @@
 - (NSInteger) setDeviceParametersFor3D
 {
     CTX_LOG(@"MetalContext_setDeviceParametersFor3D()");
-    if (clearDepthTexture) {
-        CTX_LOG(@"MetalContext_setDeviceParametersFor3D clearDepthTexture is true");
-        rttPassDesc.depthAttachment.clearDepth = 1.0;
-        rttPassDesc.depthAttachment.loadAction = MTLLoadActionClear;
-    } else {
-        rttPassDesc.depthAttachment.loadAction = MTLLoadActionLoad;
-    }
-
     // TODO: MTL: Check whether we need to do shader initialization here
     /*if (!phongShader) {
         phongShader = ([[MetalPhongShader alloc] createPhongShader:self]);
@@ -772,6 +786,8 @@
         [rtt createDepthTexture];
         rttPassDesc.depthAttachment.clearDepth = 1.0;
         rttPassDesc.depthAttachment.loadAction = MTLLoadActionClear;
+    } else {
+        rttPassDesc.depthAttachment.loadAction = MTLLoadActionLoad;
     }
 }
 
@@ -825,6 +841,11 @@
         scissorRect.height = currRtt.height;
     }
     return scissorRect;
+}
+
+- (bool) clearDepth
+{
+    return clearDepthTexture;
 }
 
 - (bool) isDepthEnabled
