modules/javafx.graphics/src/main/native-prism-mtl/MetalMeshView.m
@@ -258,7 +258,6 @@
         indexType:[mesh getIndexType]
         indexBuffer:[mesh getIndexBuffer]
         indexBufferOffset:0];
-    [context resetRenderPass];
 }
 
 - (void) release
